--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ APP_WEB_URL=http://localhost:3000
 APP_API_URL=http://localhost:3333
 
 MAIL_DRIVER=ethereal
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
