--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
     "pg": "^8.2.0",
+    "rate-limiter-flexible": "^2.1.7",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.24",
@@ -43,6 +45,7 @@
     "@types/mongodb": "^3.5.20",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.22",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
